--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8" />
-    <title th:text="${title}">Title</title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
     <h1 th:text="${title}">Default Title</h1>
 
-    <p th:unless="${cheeses} and ${cheeses.size()}">No cheese :(</p>
+    <nav th:replace="fragments :: navigation"></nav>
 
-    <a href="/cheese/add">Add Cheese</a>
+    <p th:unless="${cheesesMapList}">No cheese :(</p>
+<!--      and ${cheesesMapList.size()}-->
 
     <ul>
-        <li th:each="cheese : ${cheeses}" th:text="${cheese}"></li>
+        <li th:each="cheeses : ${cheesesMapList}">
+<!--            <div th:each="cheese : ${cheesesMap}">-->
+                <span th:text="${cheeseMap.key}"></span>:
+                <span th:text="${cheeseMap.value}"></span>
+<!--            </div>-->
+        </li>
     </ul>
+
+<!--    <th:block th:each="cheese : ${cheesesMap}">-->
+<!--        <tr>-->
+<!--            <td th:text="${cheese.cheeseName}">Cheese</td>-->
+<!--            <td th:text="${cheese.cheeseDescription}">Cheese Description</td>-->
+<!--        </tr>-->
+<!--    </th:block>-->
 
 </body>
 </html>
