--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -6,9 +6,27 @@
 
     <nav th:replace="fragments :: navigation"></nav>
 
-    <form method="post">
-        <input type="text" name="cheeseName" />
-        <textarea rows="2" cols="4" name="cheeseDescription"></textarea>
+    <form method="post" style="max-width:600px;" th:object="${cheese}">
+        <div class="form-group">
+            <label th:for="name">Name</label>
+            <input class="form-control" th:field="*{name}" />
+<!--            <span th:errors="*{name}" class="error"></span>-->
+        </div>
+        <div class="form-group">
+            <label th:for="description">Description</label>
+            <input class="form-control" th:field="*{description}" />
+<!--            <span th:errors="*{description}" class="error"></span>-->
+        </div>
+
+<!--        <div class="form-group">-->
+<!--            <label th:for="type">Type</label>-->
+<!--            <select th:field="*{type}">-->
+<!--                <option th:each="cheeseType : ${cheeseTypes}"-->
+<!--                        th:text="${cheeseType.name}"-->
+<!--                        th:value="${cheeseType}"></option>-->
+<!--            </select>-->
+<!--        </div>-->
+
         <input type="submit" value="Add Cheese" />
     </form>
 
