--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body>
-    <h1 th:text="${title}">Default Title</h1>
+<body class="container">
+<!--    <h1 th:text="${title}">Default Title</h1>-->
 
     <nav th:replace="fragments :: navigation"></nav>
 
-    <form method="post" style="max-width:600px;" th:object="${cheese}">
-        <div class="form-group">
-            <label th:for="name">Name</label>
-            <input class="form-control" th:field="*{name}" />
-<!--            <span th:errors="*{name}" class="error"></span>-->
-        </div>
-        <div class="form-group">
-            <label th:for="description">Description</label>
-            <input class="form-control" th:field="*{description}" />
-<!--            <span th:errors="*{description}" class="error"></span>-->
-        </div>
-
-<!--        <div class="form-group">-->
-<!--            <label th:for="type">Type</label>-->
-<!--            <select th:field="*{type}">-->
-<!--                <option th:each="cheeseType : ${cheeseTypes}"-->
-<!--                        th:text="${cheeseType.name}"-->
-<!--                        th:value="${cheeseType}"></option>-->
-<!--            </select>-->
-<!--        </div>-->
-
-        <input type="submit" value="Add Cheese" />
+    <form method="post" th:object="${cheese}">
+        <fieldset><br><br>
+            <h6>Add a New Cheese!</h6>
+            <div class="form-group col-sm-3 col-form-label">
+                <label th:for="name">Names</label>
+                <input type="text" class="form-control" th:field="*{name}" placeholder="Enter cheese name">
+                <span th:errors="*{name}" class="error"></span>
+            </div>
+            <div class="form-group col-sm-4 col-form-label">
+                <label th:for="description">Description</label>
+                <input type="text" class="form-control" th:field="*{description}" placeholder="Enter a description">
+                <span th:errors="*{description}" class="error"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Add Cheese</button>
+        </fieldset>
     </form>
 
 </body>
