--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,17 +4,37 @@
     <meta charset="UTF-8"/>
     <title th:text="${title}">My Cheeses</title>
 
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />-->
-<!--    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/pulse/bootstrap.min.css"/>
     <link rel="stylesheet" th:href="@{/css/styles.css}" />
     <script type="text/javascript" th:src="@{/js/script.js}"></script>
+
 </head>
 <body>
 
-    <nav th:fragment="navigation">
-        <a href="/cheese">List</a>
-        <a href="/cheese/add">Add</a>
+    <nav th:fragment="navigation" class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="/cheese">My Cheeses</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/cheese">List <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/cheese/add">Add</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="/cheese/remove">Remove</a>
+                </li>
+            </ul>
+            <div class="form-inline my-2 my-lg-0">
+                <img class="form-control-mr-sm-2" th:src=@{/cheese.png}>
+<!--                <input class="form-control mr-sm-2" type="text" placeholder="Search">-->
+<!--                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>-->
+            </div>
+        </div>
     </nav>
 
 </body>
